// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with members 1`] = `
<div>
  <div
    class="MemberListGroup"
  >
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
      />
      <div
        class="DataGrid_rows"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 10 of 15
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next "
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with no members 1`] = `
<div>
  <div
    class="MemberListGroup"
  >
    <div
      class="DataGrid"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
      </div>
      <div
        class="DataGrid_header"
      />
      <div
        class="DataGrid_rows"
      >
        <div
          class="DataGrid_loading"
        >
          <span
            class="LoadingSpinner"
            data-testid="loadingSpinner"
            id="loadingSpinner"
          >
            <span
              class="fa fa-spinner fa-fw fa-pulse spinner"
              title="Loading Icon"
            />
          </span>
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;
